build!(bhDkZWh0): update build logic
Explain later